--- a/add-item.html
+++ b/add-item.html
@@ -127,8 +127,13 @@
         </div>
     </div>
 
-    <script src="config.js"></script>
-    <script>
+<script>
+// Supabase Configuration - REPLACE WITH YOUR ACTUAL CREDENTIALS!
+const SUPABASE_CONFIG = {
+    url: 'https://pcrsiifyhsltouxplqsl.supabase.co',
+    anonKey: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBjcnNpaWZ5aHNsdG91eHBscXNsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjMzMDU0NjEsImV4cCI6MjA3ODg4MTQ2MX0.zIFUEq6dNJ-Ys3sCcZGAFnssPHNzxPcrUz-z8Ho3v_4'
+};
+</script>
         document.addEventListener('DOMContentLoaded', function() {
             initializeFormApp();
         });
