--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     <script>
         // Supabase Configuration - REPLACE WITH YOUR ACTUAL CREDENTIALS!
         const SUPABASE_CONFIG = {
-            url: 'https://your-actual-project-ref.supabase.co',
-            anonKey: 'your-actual-anon-key-here'
+            url: 'https://pcrsiifyhsltouxplqsl.supabase.co',
+            anonKey: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBjcnNpaWZ5aHNsdG91eHBscXNsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjMzMDU0NjEsImV4cCI6MjA3ODg4MTQ2MX0.zIFUEq6dNJ-Ys3sCcZGAFnssPHNzxPcrUz-z8Ho3v_4'
         };
 
         let tableContainer;
@@ -262,4 +262,5 @@
         window.clearAllData = clearAllData;
     </script>
 </body>
+
 </html>
