--- a/add-item.html
+++ b/add-item.html
@@ -136,6 +136,26 @@
             anonKey: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBjcnNpaWZ5aHNsdG91eHBscXNsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjMzMDU0NjEsImV4cCI6MjA3ODg4MTQ2MX0.zIFUEq6dNJ-Ys3sCcZGAFnssPHNzxPcrUz-z8Ho3v_4'
         };
 
+        // Debug: Check if form handler is working
+console.log('Script loaded - checking form setup...');
+
+// Test if form exists
+const form = document.getElementById('inventoryForm');
+console.log('Form element:', form);
+
+// Test if event listener is attached
+if (form) {
+    form.addEventListener('submit', function(e) {
+        console.log('Form submit event triggered!');
+        e.preventDefault();
+        console.log('Default behavior prevented');
+        handleFormSubmit();
+    });
+    console.log('Form event listener attached');
+} else {
+    console.error('Form element not found!');
+}
+
         document.addEventListener('DOMContentLoaded', function() {
             console.log('DOM loaded');
             initializeFormApp();
@@ -308,3 +328,4 @@
 </body>
 
 </html>
+
