Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
     <script>
         // Supabase Configuration - REPLACE WITH YOUR ACTUAL CREDENTIALS!
-        const SUPABASE_URL = 'https://abc.supabase.co';  // Replace with your actual URL
-        const SUPABASE_ANON_KEY = 'xyz';  // Replace with your actual anon key
+        const SUPABASE_URL = 'https://pcrsiifyhsltouxplqsl.supabase.co';  // Replace with your actual URL
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBjcnNpaWZ5aHNsdG91eHBscXNsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjMzMDU0NjEsImV4cCI6MjA3ODg4MTQ2MX0.zIFUEq6dNJ-Ys3sCcZGAFnssPHNzxPcrUz-z8Ho3v_4';  // Replace with your actual anon key
 
         // Initialize Supabase client
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
@@ -281,3 +281,4 @@
     </script>
 </body>
 </html>
+
