--- a/add-item.html
+++ b/add-item.html
@@ -184,8 +184,8 @@
     <script>
     // ==================== CONFIGURATION ====================
     // Supabase Configuration - REPLACE WITH YOUR ACTUAL CREDENTIALS!
-    const SUPABASE_URL = 'https://abc.supabase.co';  // Replace with your actual URL
-    const SUPABASE_ANON_KEY = 'xyz';  // Replace with your actual anon key
+    const SUPABASE_URL = 'https://pcrsiifyhsltouxplqsl.supabase.co';  // Replace with your actual URL
+    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBjcnNpaWZ5aHNsdG91eHBscXNsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjMzMDU0NjEsImV4cCI6MjA3ODg4MTQ2MX0.zIFUEq6dNJ-Ys3sCcZGAFnssPHNzxPcrUz-z8Ho3v_4';  // Replace with your actual anon key
 
     // Login Configuration - CHANGE THESE FOR SECURITY!
     const VALID_USERNAME = 'admin';
@@ -457,3 +457,4 @@
     </script>
 </body>
 </html>
+
