--- a/add-item.html
+++ b/add-item.html
@@ -114,16 +114,16 @@
         <div class="login-form">
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="username" placeholder="Enter username" value="pantry1">
+                <input type="text" id="username" placeholder="Enter username" value="admin">
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" placeholder="Enter password" value="      ">
+                <input type="password" id="password" placeholder="Enter password" value="password123">
             </div>
             <button onclick="login()" class="login-btn">Login</button>
         </div>
         <div style="margin-top: 20px; font-size: 12px; color: #7f8c8d;">
-            Default: pantry1 / <br>
+            Default: admin / password123<br>
             Change these in the code for security
         </div>
     </div>
@@ -189,7 +189,7 @@
 
     // Login Configuration - CHANGE THESE FOR SECURITY!
     const VALID_USERNAME = 'pantry1';
-    const VALID_PASSWORD = 'yourpassword1';
+    const VALID_PASSWORD = 'password123';
 
     // ==================== APP INITIALIZATION ====================
     // Initialize Supabase client
@@ -457,5 +457,3 @@
     </script>
 </body>
 </html>
-
-
