--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
         <div class="login-form">
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="username" placeholder="Enter username" value="pantry1">
+                <input type="text" id="username" placeholder="Enter username" value="admin">
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" placeholder="Enter password" value="             ">
+                <input type="password" id="password" placeholder="Enter password" value="password123">
             </div>
             <button onclick="login()" class="login-btn">Login</button>
         </div>
         <div style="margin-top: 20px; font-size: 12px; color: #7f8c8d;">
-            Default: pantry1 /  
+            Default: admin / password123
         </div>
     </div>
 
@@ -142,11 +142,11 @@
     <script>
     // ==================== CONFIGURATION ====================
     const SUPABASE_URL = 'https://pcrsiifyhsltouxplqsl.supabase.co';  // Replace with your actual URL
-    const SUPABASE_ANON_KEY = 'xyz';  // Replace with your actual anon key
+    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBjcnNpaWZ5aHNsdG91eHBscXNsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjMzMDU0NjEsImV4cCI6MjA3ODg4MTQ2MX0.zIFUEq6dNJ-Ys3sCcZGAFnssPHNzxPcrUz-z8Ho3v_4';  // Replace with your actual anon key
 
     // Login Configuration - CHANGE THESE FOR SECURITY!
-    const VALID_USERNAME = 'admin';
-    const VALID_PASSWORD = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBjcnNpaWZ5aHNsdG91eHBscXNsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjMzMDU0NjEsImV4cCI6MjA3ODg4MTQ2MX0.zIFUEq6dNJ-Ys3sCcZGAFnssPHNzxPcrUz-z8Ho3v_4';
+    const VALID_USERNAME = 'pantry1';
+    const VALID_PASSWORD = 'password123';
 
     // ==================== APP INITIALIZATION ====================
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
@@ -207,7 +207,7 @@
 
     // ==================== DASHBOARD FUNCTIONS ====================
     function initializeApp() {
-        if (!SUPABASE_URL || SUPABASE_URL.includes('pcrsiifyhsltouxplqsl') || !SUPABASE_ANON_KEY || SUPABASE_ANON_KEY.includes('eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBjcnNpaWZ5aHNsdG91eHBscXNsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjMzMDU0NjEsImV4cCI6MjA3ODg4MTQ2MX0.zIFUEq6dNJ-Ys3sCcZGAFnssPHNzxPcrUz-z8Ho3v_4')) {
+        if (!SUPABASE_URL || SUPABASE_URL.includes('abc') || !SUPABASE_ANON_KEY || SUPABASE_ANON_KEY.includes('xyz')) {
             showError('Please configure Supabase credentials in the code. Replace SUPABASE_URL and SUPABASE_ANON_KEY with your actual values.');
             return;
         }
@@ -363,4 +363,3 @@
     </script>
 </body>
 </html>
-
