--- a/add-item.html
+++ b/add-item.html
@@ -212,9 +212,9 @@
 
     // Login Configuration - CHANGE THESE FOR SECURITY!
     const VALID_USERNAME = 'admin';
-    const VALID_PASSWORD = 'password123';
+    const VALID_PASSWORD = '1111112';
     const ADMIN_USERNAME = 'superadmin';  // Separate admin username
-    const ADMIN_PASSWORD = 'admin123';    // Separate admin password
+    const ADMIN_PASSWORD = '1166';    // Separate admin password
 
     // ==================== APP INITIALIZATION ====================
     // Initialize Supabase client
@@ -595,3 +595,4 @@
     </script>
 </body>
 </html>
+
