--- a/add-item.html
+++ b/add-item.html
@@ -227,12 +227,33 @@
 
     // ==================== DATE FUNCTIONS ====================
     // Get current date in Singapore timezone (GMT+8)
-    function getSingaporeDate() {
+// Get current date in Singapore timezone correctly
+function getSingaporeDate() {
+    try {
         const now = new Date();
-        // Singapore is UTC+8, convert to Singapore time
-        const singaporeTime = new Date(now.getTime() + (8 * 60 * 60 * 1000));
-        return singaporeTime.toISOString().split('T')[0];
+        const formatter = new Intl.DateTimeFormat('en-SG', {
+            timeZone: 'Asia/Singapore',
+            year: 'numeric',
+            month: '2-digit',
+            day: '2-digit'
+        });
+        
+        const parts = formatter.formatToParts(now);
+        const day = parts.find(part => part.type === 'day').value;
+        const month = parts.find(part => part.type === 'month').value;
+        const year = parts.find(part => part.type === 'year').value;
+        
+        return `${year}-${month}-${day}`;
+    } catch (error) {
+        // Fallback to local date if Intl API fails
+        console.warn('Using local date as fallback');
+        const now = new Date();
+        const day = String(now.getDate()).padStart(2, '0');
+        const month = String(now.getMonth() + 1).padStart(2, '0');
+        const year = now.getFullYear();
+        return `${year}-${month}-${day}`;
     }
+}
 
     // Format date for CSV export in Singapore time
     function formatDateForCSV(dateString) {
@@ -618,4 +639,5 @@
     </script>
 </body>
 </html>
+
 
